styles/global.css
:root {
  --pink-light: #c59dd2;
  --pink-base: #9547a5;
  --pink-dark: #7d298a;
  --pink-low: #3f0f41;

  --blue-light: #77b6d2;
  --blue-base: #358bb9;
  --blue-mid: #2374a4;
  --blue-dark: #144a72;
  --blue-low: #08233c;

  --shape-stroke: #002347;
  --shape-hover: #001933;
  --shape-base: #000f1f;
  --shape-background: #00050a;

  --text-title: #f8fbfb;
  --text-body: #e2e7e9;
  --text-label: #bac6c9;

  --title-xs: 1rem;
  --title-sm: 2rem;
  --title-md: 2.5rem;
  --title-lg: 3rem;

  --text-subtitle: 2rem;

  --text-xs: 0.75rem;
  --text-sm: 0.875rem;
  --text-md: 1rem;
  --text-lg: 1.25rem;

  --text-button: 0.875rem;

  --text-link: 0.875rem;

  --text-tag: 0.625rem;

  --font-raleway: 'Raleway', system-ui;

  --font-base: 500;
  --font-medium: 600;
  --font-bold: 700;

  @media (max-width: 480px) {
    --text-xs: 0.525rem;
    --text-sm: 0.7rem;
    --text-md: 0.7875rem;
    --text-lg: 0.875rem;

    --title-xs: 0.6rem;
    --title-sm: 1rem;
    --title-md: 1.5rem;
    --title-lg: 1.75rem;
  }

  @media (max-width: 1024px) {
    --text-subtitle: 1.5rem;

    --text-xs: 0.5rem;
    --text-sm: 0.75rem;
    --text-md: 0.875rem;
    --text-lg: 1rem;
  }
}

*,
*:before,
*:after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  font-family: var(--font-raleway);
  color: var(--text-body);
}

body {
  background-color: var(--shape-background);
  overflow-x: hidden;
}

button {
  font-weight: var(--font-bold);
  font-size: var(--text-button);
  color: var(--text-title);

  border-radius: 0.5rem;
  border: 0;

  width: 5rem;
  height: 2.5rem;

  cursor: pointer;
}

a {
  text-decoration: none;

  color: var(--blue-light);

  &:hover {
    color: var(--text-body);
  }
}

#icon {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  width: 2.5rem;
  height: 2.5rem;

  --icon: url();

  position: relative;

  background-image: var(--icon);

  transition: background 0.5s;

  overflow: hidden;
}

#icon:before {
  content: '';
  position: absolute;
  z-index: -1;

  background-color: var(--shape-stroke);

  width: 100%;
  height: 100%;

  transform: scale(0.2);

  border-radius: 100%;

  opacity: 0;

  transition:
    opacity 800ms,
    transform 200ms;
}

#icon:hover:before {
  opacity: 1;
  transform: scale(1.5);
}

#mistery-item {
  --url: url();
  background-image: var(--url);

  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  width: 5rem;
  height: 5rem;

  position: absolute;

  &[aria-label='book'] {
    --url: url(../assets/ui/mystery-opened-spellbook.png);

    rotate: 10deg;
    &:hover {
      transform: scale(1.1) rotate(10deg);
    }
  }

  &[aria-label='ouija'] {
    --url: url(../assets/ui/mystery-ouija-planchette.png);

    rotate: 100deg;
    &:hover {
      transform: scale(1.1) rotate(10deg);
    }
  }

  &[aria-label='crystal-ball'] {
    --url: url(../assets/ui/mystery-crystal-ball.png);

    rotate: -15deg;

    &:hover {
      transform: scale(1.1) rotate(10deg);
    }
  }
  @media (min-width: 480px) and (max-width: 768px) {
    width: 3.5rem;
    height: 3.5rem;
  }
}

.blur {
  width: 33.625rem;
  height: 33.625rem;

  border-radius: 33.625rem;
  background: var(--pink-pink-low, #3f0f41);
  filter: blur(434px);

  position: absolute;
  z-index: -1;

  /* @media (max-width: 480px) {
    display: none;
  } */
}

li,
ul {
  text-decoration: none;
  list-style: none;
}

